# S3RES

./: .gitignore  LICENSE  Makefile  README.md  bbb_pre_run.sh  directory_paths.sample  laptop_pre_run.sh  pre_run.sh  run.sh
controllers/: Makefile  a_star.c  art_pot.c  art_pot_launch.c  art_pot_p.c  benchmarker.c  empty.c  filter.c  generic_empty.c  launch.sh  load.c  logger.c  mapper.c  mapping.c  min.c  pass_through.c  pb.c  redundant_test.c  voter_tmr.c  voterb.c  voterc.c  voterd.c
debug_module/: Makefile  pint-debug.c
examples/: hands_off.c  scrap.c  test.c
fault_injection/: Makefile  c_injector.c  injector.py  main.c  player_to_rt.py  register_util.c  register_util.h  single_injector.py
include/: bench_config.h  commtypes.h  controller.h  cpu.h  customtimer.h  fd_client.h  fd_server.h  force.h  mapping.h  pint.h  print_registers.h  register_util.h  replicas.h  scheduler.h  statstime.h  system_config.h  taslimited.h  time.h  utility.h  vote_buff.h
micro_test/: Makefile  empty_bench.c  empty_restart.c
player_drivers/: readme.txt  voter_a_driver.backup.cc
player_drivers/benchmarker/: CMakeLists.txt  baseline.cfg  benchmarker_driver.cc  marker.cfg
player_mod/: driver.h  readme.txt  redundant_driver.cc
player_translator_driver/: CMakeLists.txt  baseline.cfg  translator_driver.cc
player_translator_driver/translator/: CMakeLists.txt
plumber/: Makefile  pb.l  pb.y  plumber_description.md  plumbing.c  plumbing.h
rm_test_driver/: CMakeLists.txt  rm_test_driver.cc
run_scripts/: bb_run_mini_faults.sh  check_usage.py  common_test.sh  laptop_run_mini_faults.sh  run_bb_baseline.sh  run_capture_usage.sh  run_micro_test.sh  run_mini_baseline.sh  run_mini_faults.sh
src/: commtypes.c  commtypes.cpp  controller.c  cpu.cpp  fd_client.c  fd_client.cpp  fd_server.c  fd_server.cpp  mapping.c  mapping.cpp  redundant_driver.cc  register_util.c  replicas.c  replicas.cpp  scheduler.cpp  select.c  taslimited.cpp  test.c  utility.c
stage_control/: Makefile  basic.c  logger.c
tas_lib/: Makefile  cpu.c  force.c  force.cpp  scheduler.c  scheduler.cpp  tas_time.c  taslimited.c  taslimited.cpp  time.c  time.cpp
test/: Makefile  a_star_test.c  a_star_vote_test.c  art_pot_test.c  art_pot_vote_test.c  display_runs.py  empty_test.c  empty_vote_test.c  filter_test.c  filter_vote_test.c  generic_empty_test.c  generic_empty_vote_test.c  load_test.c  mapper_test.c  mapper_vote_test.c  run_empty_bench_test.sh  run_restart_test.sh  test.h
tracee_progs/: fib.c
voter/: Makefile  fd_serverm.c  (+10 more)
voter_a_driver/: CMakeLists.txt  voter_a_driver.cc  voter_test.cfg
(+68 files in other folders)
